# Orlando

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  STATUS.md
crates/orlando-cluster/: Cargo.toml  build.rs
crates/orlando-cluster/examples/: cluster.rs
crates/orlando-cluster/proto/: orlando.proto
crates/orlando-cluster/src/: cluster_grain_ref.rs  cluster_silo.rs  connection_pool.rs  error.rs  failure_detector.rs  hash_ring.rs  lib.rs  membership.rs  message_registry.rs  network_message.rs  placement.rs  rebalancer.rs  swim.rs  transport.rs
crates/orlando-cluster/tests/: cluster_test.rs  encoding_test.rs  placement_test.rs
crates/orlando-core/: Cargo.toml
crates/orlando-core/src/: envelope.rs  error.rs  filter.rs  grain.rs  grain_context.rs  grain_id.rs  grain_ref.rs  lib.rs  mailbox.rs  observer.rs  reentrant_mailbox.rs  request_context.rs  stream.rs  testing.rs  worker_ref.rs
crates/orlando-macros/: Cargo.toml
crates/orlando-macros/src/: lib.rs
crates/orlando-persistence/: Cargo.toml
crates/orlando-persistence/examples/: persistent_counter.rs
crates/orlando-persistence/src/: file_store.rs  lib.rs  memory_store.rs  persistent_grain.rs  persistent_mailbox.rs  persistent_silo.rs  sqlite_store.rs  store.rs  transaction.rs  versioned_grain.rs
crates/orlando-persistence/tests/: persistent_counter.rs  reentrant_persistent_test.rs  transaction_test.rs  versioned_test.rs
crates/orlando-runtime/: Cargo.toml
crates/orlando-runtime/examples/: chat_room.rs  counter.rs
crates/orlando-runtime/src/: activation.rs  directory.rs  lib.rs  silo.rs  worker_pool.rs
crates/orlando-runtime/tests/: counter_grain.rs  drain_test.rs  filter_test.rs  observer_test.rs  reentrant_test.rs  request_context_test.rs  stream_test.rs  timeout_test.rs  worker_test.rs
crates/orlando-timers/: Cargo.toml
crates/orlando-timers/examples/: reminders.rs
crates/orlando-timers/src/: lib.rs  reminder.rs  reminder_service.rs  reminder_store.rs  sqlite_reminder_store.rs  timer.rs
crates/orlando-timers/tests/: reminder_test.rs  timer_test.rs
