[package]
name = "orlando-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
orlando-core = { path = "../orlando-core" }
orlando-runtime = { path = "../orlando-runtime" }
tokio = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
fastrand = "2"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
