[package]
name = "orlando-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
orlando-core = { path = "../orlando-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
orlando-macros = { path = "../orlando-macros" }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
