[package]
name = "orlando-timers"
version = "0.1.0"
edition = "2024"

[dependencies]
orlando-core = { path = "../orlando-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
orlando-runtime = { path = "../orlando-runtime" }
tracing-subscriber = { workspace = true }
